Fixed alignments

--- a/input.css
+++ b/input.css
@@ -6,3 +6,11 @@
 .form__button {
   background-image: linear-gradient(135deg, hsl(0, 80%, 86%), hsl(0, 74%, 74%));
 }
+
+/* .form__button:hover {
+  background-image: linear-gradient(
+    135deg,
+    hsl(0, 0%, 100%),
+    hsl(0, 100%, 98%)
+  );
+} */
