--- a/output.css
+++ b/output.css
@@ -535,28 +535,12 @@ video {
   margin-bottom: 1.75rem;
 }
 
-.-ml-16{
-  margin-left: -4rem;
+.ml-\[-1px\]{
+  margin-left: -1px;
 }
 
 .ml-\[-63px\]{
   margin-left: -63px;
-}
-
-.mr-\[2px\]{
-  margin-right: 2px;
-}
-
-.mr-\[-2px\]{
-  margin-right: -2px;
-}
-
-.ml-\[-2px\]{
-  margin-left: -2px;
-}
-
-.ml-\[-1px\]{
-  margin-left: -1px;
 }
 
 .box-border{
@@ -579,20 +563,12 @@ video {
   height: 250px;
 }
 
-.h-\[44px\]{
-  height: 44px;
-}
-
 .h-12{
   height: 3rem;
 }
 
-.h-10{
-  height: 2.5rem;
-}
-
-.h-11{
-  height: 2.75rem;
+.w-screen{
+  width: 100vw;
 }
 
 .w-\[375px\]{
@@ -603,40 +579,12 @@ video {
   width: 310px;
 }
 
-.w-\[310\]{
-  width: 310;
-}
-
-.w-\[308px\]{
-  width: 308px;
+.w-\[312px\]{
+  width: 312px;
 }
 
 .w-16{
   width: 4rem;
-}
-
-.w-\[246px\]{
-  width: 246px;
-}
-
-.w-\[248px\]{
-  width: 248px;
-}
-
-.w-\[312\]{
-  width: 312;
-}
-
-.w-\[280\]{
-  width: 280;
-}
-
-.w-\[280px\]{
-  width: 280px;
-}
-
-.w-\[312px\]{
-  width: 312px;
 }
 
 .flex-col{
@@ -663,26 +611,12 @@ video {
   border-radius: 9999px;
 }
 
-.rounded-l-full{
-  border-top-left-radius: 9999px;
-  border-bottom-left-radius: 9999px;
-}
-
 .border{
   border-width: 1px;
 }
 
 .border-0{
   border-width: 0px;
-}
-
-.border-\[0\.5px\]{
-  border-width: 0.5px;
-}
-
-.border-desaturated-red{
-  --tw-border-opacity: 1;
-  border-color: hsl(0 36% 70% / var(--tw-border-opacity));
 }
 
 .border-dark-grayish-red{
@@ -771,6 +705,14 @@ video {
   background-image: linear-gradient(135deg, hsl(0, 80%, 86%), hsl(0, 74%, 74%));
 }
 
+/* .form__button:hover {
+  background-image: linear-gradient(
+    135deg,
+    hsl(0, 0%, 100%),
+    hsl(0, 100%, 98%)
+  );
+} */
+
 .placeholder\:text-desaturated-red::-moz-placeholder{
   --tw-text-opacity: 1;
   color: hsl(0 36% 70% / var(--tw-text-opacity));
@@ -779,4 +721,21 @@ video {
 .placeholder\:text-desaturated-red::placeholder{
   --tw-text-opacity: 1;
   color: hsl(0 36% 70% / var(--tw-text-opacity));
+}
+
+.hover\:ml-\[-32\]:hover{
+  margin-left: -32;
+}
+
+.hover\:ml-\[-32px\]:hover{
+  margin-left: -32px;
+}
+
+.hover\:w-20:hover{
+  width: 5rem;
+}
+
+.hover\:drop-shadow-2xl:hover{
+  --tw-drop-shadow: drop-shadow(0 25px 25px rgb(0 0 0 / 0.15));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
